--- a/app/views/portfolio/social_links/show.html.erb
+++ b/app/views/portfolio/social_links/show.html.erb
@@ -10,5 +10,5 @@
   <%= @link.user_name %>
 </p>
 
-<%= link_to 'Edit', edit_portfolio_item_social_link_path(@item, @link) %> |
-<%= link_to 'Back', portfolio_item_social_links_path(@item) %>
+<%= link_to 'Edit', edit_item_social_link_path(@item, @link) %> |
+<%= link_to 'Back', item_social_links_path(@item) %>
