--- a/app/views/portfolio/items/_form.html.erb
+++ b/app/views/portfolio/items/_form.html.erb
@@ -69,10 +69,10 @@
 
   <div class="actions">
     <%= f.submit class: 'btn btn-primary' %>
-    <%= link_to 'Back', portfolio_items_path, class: 'btn btn-default' %>
+    <%= link_to 'Back', items_path, class: 'btn btn-default' %>
     <% unless @item.new_record? %>
     <%= link_to 'Show', @item, class: 'btn btn-default' %>
-    <%= link_to 'Links', portfolio_item_social_links_path(@item), class: 'btn btn-default' %>
+    <%= link_to 'Links', item_social_links_path(@item), class: 'btn btn-default' %>
     <% end %>
   </div>
 <% end %>
