cleaned migrations + added readme

--- a/app/assets/stylesheets/portfolio/home.scss
+++ b/app/assets/stylesheets/portfolio/home.scss
@@ -19,3 +19,8 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 h1, h2, h3 { font-weight: 600; }
+
+.empty-portfolio {
+  text-align: center;
+  margin-top: 250px;
+}
