--- a/app/views/portfolio/items/show.html.erb
+++ b/app/views/portfolio/items/show.html.erb
@@ -27,7 +27,7 @@
     <% end %>
   </div>
 <% else %>
-  <span>Coming soon!</span>
+  <div class="empty-portfolio">Nothing in here yet!</div>
 <% end %>
 
 <script>
