--- a/app/views/portfolio/item_social_links/index.html.erb
+++ b/app/views/portfolio/item_social_links/index.html.erb
@@ -14,10 +14,10 @@
   <tbody>
     <% @links.each do |portfolio_social_link| %>
       <tr>
-        <td><%= portfolio_social_link.name %></td>
+        <td><%= portfolio_social_link.social_link.name %></td>
         <td><%= portfolio_social_link.user_name %></td>
-        <td><%= link_to 'Edit', edit_item_social_link_path(@item, portfolio_social_link) %></td>
-        <td><%= link_to 'Destroy', item_social_link_path(@item, portfolio_social_link), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_item_item_social_link_path(@item, portfolio_social_link) %></td>
+        <td><%= link_to 'Destroy', item_item_social_link_path(@item, portfolio_social_link), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,5 +25,5 @@
 
 <br>
 
-<%= link_to 'New Social link', new_item_social_link_path(@item), class: 'btn btn-primary' %>
+<%= link_to 'New Social link', new_item_item_social_link_path(@item), class: 'btn btn-primary' %>
 <%= link_to 'Go Back', edit_item_path(@item), class: 'btn btn-default' %>
