--- a/app/views/portfolio/items/_form.html.erb
+++ b/app/views/portfolio/items/_form.html.erb
@@ -72,7 +72,7 @@
     <%= link_to 'Back', items_path, class: 'btn btn-default' %>
     <% unless @item.new_record? %>
     <%= link_to 'Show', @item, class: 'btn btn-default' %>
-    <%= link_to 'Links', item_social_links_path(@item), class: 'btn btn-default' %>
+    <%= link_to 'Links', item_item_social_links_path(@item), class: 'btn btn-default' %>
     <% end %>
   </div>
 <% end %>
