--- a/app/views/portfolio/items/show.html.erb
+++ b/app/views/portfolio/items/show.html.erb
@@ -14,9 +14,9 @@
     </div>
 
     <div class="pf_social_links">
-      <% @item.social_links.each do |link| %>
-      <%= link_to image_tag(link.get_info[:img]), link.get_info[:url], 
-          title: link.get_info[:title], target: :_blank, 
+      <% @item.item_social_links.each do |link| %>
+      <%= link_to image_tag(link.social_link.image(:medium)), link.url, 
+          title: link.social_link.name, target: :_blank, 
           data: {toggle: 'tooltip', placement: 'top'} %>
       <% end %>
     </div>
