--- a/app/views/layouts/portfolio/admin.html.erb
+++ b/app/views/layouts/portfolio/admin.html.erb
@@ -37,32 +37,7 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <% if admin_user_signed_in? %>
-    <nav class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li>
-              <%= link_to 'Portfolios', items_path %>
-            </li>
-            <li>
-              <%= link_to 'Sign out', destroy_admin_user_session_path, method: :delete %>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    <% end %>
+    <%= render 'portfolio/shared/header_menu' if admin_user_signed_in? %>
 
     <div class="container">
       <%= bootstrap_flash %>
