--- a/app/views/layouts/portfolio/portfolio.html.erb
+++ b/app/views/layouts/portfolio/portfolio.html.erb
@@ -43,10 +43,9 @@
     <div class="container-portfolio">
       <%= bootstrap_flash %>
       <%= yield %>
-    </div> <!-- /container -->
-    <footer>
-      <p>&copy; Eduardo Messuti <%= Time.now.year %></p>
-    </footer>
+    </div>
+    
+    <%= render 'portfolio/shared/footer' %>
     
     <% unless admin_user_signed_in? %>
       <script>
