--- a/app/views/portfolio/item_social_links/index.html.erb
+++ b/app/views/portfolio/item_social_links/index.html.erb
@@ -1,6 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Portfolio Social Links</h1>
+<h1>Listing Social Links of "<%= @item.person_name %>"</h1>
 
 <table class="table">
   <thead>
@@ -26,4 +24,4 @@
 <br>
 
 <%= link_to 'New Social link', new_item_item_social_link_path(@item), class: 'btn btn-primary' %>
-<%= link_to 'Go Back', edit_item_path(@item), class: 'btn btn-default' %>
+<%= link_to 'Back', edit_item_path(@item), class: 'btn btn-default' %>
