--- a/app/views/portfolio/items/index.html.erb
+++ b/app/views/portfolio/items/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
     <tr>
       <th>Key</th>
-      <th>Title</th>
-      <th>Links</th>
+      <th>Person</th>
+      <th>Menu Links</th>
+      <th>Social Links</th>
       <th>Default</th>
       <th colspan="3"></th>
     </tr>
@@ -15,10 +16,11 @@
     <% @items.each do |item| %>
       <tr>
         <td><%= item.key %></td>
-        <td><%= item.title %></td>
+        <td><%= item.person_name %></td>
+        <td><%= link_to item.item_menu_links.count, item_item_menu_links_path(item) %></td>
         <td><%= link_to item.item_social_links.count, item_item_social_links_path(item) %></td>
         <td><%= item.default ? 'Yes' : 'No' %></td>
-        <td><%= link_to 'Show', item %></td>
+        <td><%= link_to 'Preview', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
         <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -28,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New portfolio item', new_item_path, class: 'btn btn-default' %>
+<%= link_to 'New portfolio item', new_item_path, class: 'btn btn-primary' %>
