--- a/app/views/portfolio/items/_form.html.erb
+++ b/app/views/portfolio/items/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@item, :html => { :multipart => true }) do |f| %>
-  <% if @item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this portfolio item from being saved:</h2>
-
-      <ul>
-      <% @item.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'portfolio/shared/form_errors', record: @item %>
 
   <div class="row">
     <div class="col-xs-6">
@@ -72,6 +62,7 @@
     <%= link_to 'Back', items_path, class: 'btn btn-default' %>
     <% unless @item.new_record? %>
     <%= link_to 'Preview', @item, class: 'btn btn-default' %>
+    <%= link_to "Projects (#{@item.item_projects.count})", item_item_projects_path(@item), class: 'btn btn-default' %>
     <%= link_to "Menu Links (#{@item.item_menu_links.count})", item_item_menu_links_path(@item), class: 'btn btn-default' %>
     <%= link_to "Social Links (#{@item.item_social_links.count})", item_item_social_links_path(@item), class: 'btn btn-default' %>
     <% end %>
