--- a/app/views/portfolio/social_links/_form.html.erb
+++ b/app/views/portfolio/social_links/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_for(@social_link) do |f| %>
-  <% if @social_link.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@social_link.errors.count, "error") %> prohibited this social_link from being saved:</h2>
-
-      <ul>
-      <% @social_link.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'portfolio/shared/form_errors', record: @social_link %>
 
   <div class="form-group">
     <%= f.label :name %><br>
