--- a/app/assets/stylesheets/portfolio/items.scss
+++ b/app/assets/stylesheets/portfolio/items.scss
@@ -1,6 +1,4 @@
-.portfolio_container {
-  text-align: center;
-  padding-top: 30px;
+.container-portfolio {
   position: relative;
 
   .portfolio_header_menu {
@@ -16,6 +14,34 @@
       text-decoration: underline;
     }
   }
+}
+
+.top_title {
+  margin-top: 40px;
+  background-color: rgb(123, 159, 207);
+  color: white;
+  padding: 15px 0;
+  position: relative;
+
+  .pf_avatar {
+    position: absolute;
+    border-radius: 40px;
+    border: 3px solid #dfdfdf;
+    width: 80px;
+    top: -8px;
+    left: 8px;
+  }
+
+  .title {
+    margin-left: 100px;
+    font-size: 1.5em;
+  }
+}
+
+.portfolio_container {
+  text-align: center;
+  padding-top: 30px;
+  position: relative;
 
   .pf_avatar {
     border-radius: 75px;
@@ -53,7 +79,33 @@
     margin-bottom: 30px;
   }
 
+  .portfolio_projects {
+    max-width: 800px;
+    margin-bottom: 50px;
+
+    .project_container {
+      border: 1px solid lightgrey;
+      padding: 10px;
+      margin: 15px 0;
+      border-radius: 5px;
+
+      a.project_name {
+        margin-top: 10px;
+        display: inline-block;
+      }
+    }
+
+    h2 {
+      margin-bottom: 1em;
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
   .pf_social_links {
+    clear: both;
     padding-bottom: 30px;
     img {
       height: 32px;
