--- a/app/views/portfolio/item_projects/index.html.erb
+++ b/app/views/portfolio/item_projects/index.html.erb
@@ -6,6 +6,7 @@
       <th>Name</th>
       <th>Description</th>
       <th>Url</th>
+      <th>Images</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         <td><%= item_project.name %></td>
         <td><%= item_project.description %></td>
         <td><%= item_project.url %></td>
+        <td><%= item_project.item_project_images.count %></td>
         <td><%= link_to 'Edit', edit_item_item_project_path(@item, item_project) %></td>
         <td><%= link_to 'Destroy', [@item, item_project], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
