--- a/app/views/portfolio/shared/_header_menu.html.erb
+++ b/app/views/portfolio/shared/_header_menu.html.erb
@@ -12,7 +12,7 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><%= link_to 'Portfolios', items_path %></li>
+        <li><%= link_to 'Portfolios', sites_path %></li>
         <li><%= link_to 'Social Links', social_links_path %></li>
         <li><%= link_to 'Sign out', destroy_admin_user_session_path, method: :delete %></li>
       </ul>
