subclass site_items

--- a/app/views/portfolio/site_items/_form.html.erb
+++ b/app/views/portfolio/site_items/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="actions">
     <%= f.hidden_field :site_id %>
     <%= f.submit class: 'btn btn-primary' %>
-    <%= link_to 'Back', [@item, :site_items], class: 'btn btn-default' %>
+    <%= link_to 'Back', [@item, @resource_name_p], class: 'btn btn-default' %>
   </div>
 <% end %>
 
