--- a/app/views/portfolio/site_items/index.html.erb
+++ b/app/views/portfolio/site_items/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Projects of "<%= @item.person_name %>"</h1>
+<h1>Listing <%= @resource_name.split('_').last.pluralize.downcase %> of "<%= @item.person_name %>"</h1>
 
 <table class="table">
   <thead>
@@ -27,5 +27,5 @@
 
 <br>
 
-<%= link_to 'New Item project', [:new, :site, :site_item], class: 'btn btn-primary' %>
+<%= link_to "New #{@resource_name.humanize.downcase}", [:new, :site, @resource_name], class: 'btn btn-primary' %>
 <%= link_to 'Back', [:edit, @item], class: 'btn btn-default' %>
