--- a/app/views/portfolio/site_items/_images.html.erb
+++ b/app/views/portfolio/site_items/_images.html.erb
@@ -9,18 +9,18 @@
     </tr>
   </thead>
   <tbody>
-    <% @item_project.site_item_images.each do |image| %>
+    <% @item.site_item_images.each do |image| %>
       <tr>
         <td><%= image_tag image.image.url(:thumb) %></td>
         <td><%= image.default ? 'Yes' : 'No' %></td>
-        <td><%= link_to 'Set Default', [:set_default, @item, @item_project, image], method: :put unless image.default %></td>
-        <td><%= link_to 'Destroy', [@item, @item_project, image], method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <td><%= link_to 'Set Default', [:set_default, @site, @item, image], method: :put unless image.default %></td>
+        <td><%= link_to 'Destroy', [@site, @item, image], method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= form_for [@item, @item_project, @image] do |f| %>
+<%= form_for [@site, @item, @image] do |f| %>
   <%= render 'portfolio/shared/form_errors', record: @image %>
 
   <div class="row">
