--- a/app/views/portfolio/sites/_form.html.erb
+++ b/app/views/portfolio/sites/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(@item, :html => { :multipart => true }) do |f| %>
-  <%= render 'portfolio/shared/form_errors', record: @item %>
+<%= form_for(@site, :html => { :multipart => true }) do |f| %>
+  <%= render 'portfolio/shared/form_errors', record: @site %>
 
   <div class="row">
     <div class="col-xs-6">
@@ -60,11 +60,11 @@
   <div class="actions">
     <%= f.submit class: 'btn btn-primary' %>
     <%= link_to 'Back', sites_path, class: 'btn btn-default' %>
-    <% unless @item.new_record? %>
-    <%= link_to 'Preview', @item, class: 'btn btn-default' %>
-    <%= link_to "Projects (#{@item.site_projects.count})", [@item, :site_projects], class: 'btn btn-default' %>
-    <%= link_to "Menu Links (#{@item.site_menu_links.count})", [@item, :site_menu_links], class: 'btn btn-default' %>
-    <%= link_to "Social Links (#{@item.site_social_links.count})", [@item, :site_social_links], class: 'btn btn-default' %>
+    <% unless @site.new_record? %>
+    <%= link_to 'Preview', @site, class: 'btn btn-default' %>
+    <%= link_to "Projects (#{@site.site_projects.count})", [@site, :site_projects], class: 'btn btn-default' %>
+    <%= link_to "Menu Links (#{@site.site_menu_links.count})", [@site, :site_menu_links], class: 'btn btn-default' %>
+    <%= link_to "Social Links (#{@site.site_social_links.count})", [@site, :site_social_links], class: 'btn btn-default' %>
     <% end %>
   </div>
 <% end %>
