--- a/app/views/portfolio/site_items/edit.html.erb
+++ b/app/views/portfolio/site_items/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editing Project of "<%= @item.person_name %>"</h1>
+<h1>Editing Project of "<%= @site.person_name %>"</h1>
 
 <%= render 'portfolio/site_items/form' %>
