--- a/app/views/portfolio/site_items/show.html.erb
+++ b/app/views/portfolio/site_items/show.html.erb
@@ -1,16 +1,16 @@
 
 <div class="top_title">
-  <%= link_to image_tag(@item.avatar.url(:thumb), class: :pf_avatar), show_portfolio_path(@item.key) if @item.avatar.file? %>
+  <%= link_to image_tag(@site.avatar.url(:thumb), class: :pf_avatar), show_portfolio_path(@site.key) if @site.avatar.file? %>
   <span class="title">
-    <%= @item.title %>
+    <%= @site.title %>
   </span>
 </div>
 <%= render 'portfolio/items/header_menu' %>
 
-<h1><%= @item_project.name %></h1>
+<h1><%= @item.name %></h1>
 
-<%= image_tag @item_project.default_image_url(:large) %>
+<%= image_tag @item.default_image_url(:large) %>
 
 <div class="project_description">
-  <%= @item_project.description %>
+  <%= @item.description %>
 </div>
