--- a/app/views/portfolio/sites/_projects.html.erb
+++ b/app/views/portfolio/sites/_projects.html.erb
@@ -2,11 +2,11 @@
 <div class="container portfolio_projects">
   <h2>Projects</h2>
   
-  <% item.item_projects.each do |project| %>
+  <% item.site_projects.each do |project| %>
     <div class="col-md-4 col-xs-6">
       <div class="project_container">
         <%= link_to image_tag(project.default_image_url), show_portfolio_project_path(item.key, project.id) %>
-        <%= link_to project.name, show_portfolio_project_path(item.key, project.id), class: 'project_name' %>
+        <%= link_to project.title, show_portfolio_project_path(item.key, project.id), class: 'project_name' %>
       </div>
     </div>
   <% end %>
