--- a/app/views/portfolio/sites/index.html.erb
+++ b/app/views/portfolio/sites/index.html.erb
@@ -14,11 +14,11 @@
   </thead>
 
   <tbody>
-    <% @items.each do |item| %>
+    <% @sites.each do |item| %>
       <tr>
         <td><%= item.key %></td>
         <td><%= item.person_name %></td>
-        <td><%= link_to item.site_items.count, [item, :site_items] %></td>
+        <td><%= link_to item.site_items.count, [item, :site_projects] %></td>
         <td><%= link_to item.site_menu_links.count, [item, :site_menu_links] %></td>
         <td><%= link_to item.site_social_links.count, [item, :site_social_links] %></td>
         <td><%= item.default ? 'Yes' : 'No' %></td>
