--- a/app/views/layouts/portfolio/admin.html.erb
+++ b/app/views/layouts/portfolio/admin.html.erb
@@ -39,7 +39,7 @@
   <body>
     <%= render 'portfolio/shared/header_menu' if admin_user_signed_in? %>
 
-    <div class="container">
+    <div class="container admin-portfolio">
       <%= bootstrap_flash %>
       <%= yield %>
     </div>
