--- a/app/views/portfolio/site_items/_form.html.erb
+++ b/app/views/portfolio/site_items/_form.html.erb
@@ -1,17 +1,25 @@
 <%= form_for([@site, @item]) do |f| %>
   <%= render 'portfolio/shared/form_errors', record: @item %>
 
-  <div class="form-group">
-    <%= f.label :title %><br>
-    <%= f.text_field :title, class: 'form-control' %>
+  <div class="row">
+    <div class="col-xs-6">
+      <div class="form-group">
+        <%= f.label :title %><br>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+      
+    </div>
+    <div class="col-xs-6">
+      <div class="form-group">
+        <%= f.label :url %><br>
+        <%= f.text_field :url, class: 'form-control'%>
+      </div>
+    </div>
   </div>
+
   <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.text_area :body, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :url %><br>
-    <%= f.text_field :url, class: 'form-control'%>
+    <%= f.text_area :body, class: 'form-control p_text_area' %>
   </div>
   <div class="actions">
     <%= f.hidden_field :site_id %>
