--- a/app/views/portfolio/site_items/index.html.erb
+++ b/app/views/portfolio/site_items/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing <%= @resource_name.split('_').last.pluralize.downcase %> of "<%= @site.person_name %>"</h1>
+<h1>Listing <%= @resource_name_h.pluralize %> of "<%= @site.person_name %>"</h1>
 
 <table class="table">
   <thead>
