--- a/app/views/portfolio/site_items/new.html.erb
+++ b/app/views/portfolio/site_items/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Project for "<%= @site.person_name %>"</h1>
+<h1>New <%= @resource_name_h %> for "<%= @site.person_name %>"</h1>
 
 <%= render 'form' %>
