--- a/app/views/portfolio/sites/_form.html.erb
+++ b/app/views/portfolio/sites/_form.html.erb
@@ -27,6 +27,22 @@
 
     <div class="col-xs-6">
       <div class="form-group">
+        <%= f.label :job_title %>
+        <%= f.text_field :job_title, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-6">
+      <div class="form-group">
+        <%= f.label :greetings %>
+        <%= f.text_field :greetings, class: 'form-control' %>
+      </div>
+    </div>
+
+    <div class="col-xs-6">
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.text_field :email, class: 'form-control' %>
       </div>
@@ -35,15 +51,7 @@
 
   <div class="row">
     <div class="col-xs-6">
-      <div class="form-group">
-        <%= f.label :job_title %>
-        <%= f.text_field :job_title, class: 'form-control' %>
-      </div>
-    </div>
-
-    <div class="col-xs-6">
       <div class="checkbox">
-        <br>
         <label>
           <%= f.check_box :default %>
           Default
@@ -51,11 +59,18 @@
       </div>
     </div>
   </div>
-  
-  <div class="form-group">
-    <%= f.label :summary %><br>
-    <%= f.text_area :summary, class: 'form-control' %>
+
+  <br>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="form-group">
+        <%= f.label :summary %><br>
+        <%= f.text_area :summary, class: 'form-control p_text_area' %>
+      </div>
+    </div>
   </div>
+  
 
   <div class="actions">
     <%= f.submit class: 'btn btn-primary' %>
