--- a/app/assets/stylesheets/portfolio/application.scss
+++ b/app/assets/stylesheets/portfolio/application.scss
@@ -1,7 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import "items";
-@import "home";
+@import "portfolio";
+@import "sites";
+@import "site_items";
 @import "social_links";
 @import "admin";
