--- a/app/views/portfolio/site_items/_form.html.erb
+++ b/app/views/portfolio/site_items/_form.html.erb
@@ -19,7 +19,7 @@
 
   <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.text_area :body, class: 'form-control p_text_area' %>
+    <%= f.text_area :body, class: 'form-control pf_text_area' %>
   </div>
   <div class="actions">
     <%= f.hidden_field :site_id %>
