--- a/app/views/portfolio/sites/_form.html.erb
+++ b/app/views/portfolio/sites/_form.html.erb
@@ -66,7 +66,7 @@
     <div class="col-xs-12">
       <div class="form-group">
         <%= f.label :summary %><br>
-        <%= f.text_area :summary, class: 'form-control p_text_area' %>
+        <%= f.text_area :summary, class: 'form-control pf_text_area' %>
       </div>
     </div>
   </div>
