--- a/app/views/portfolio/sites/show.html.erb
+++ b/app/views/portfolio/sites/show.html.erb
@@ -1,37 +1,35 @@
 <% unless @site.nil? %>
   <%= content_for :title, @site.person_name %>
-  <%= content_for :container_class, 'container_wide' %>
+  <%= content_for :container_class, 'container_wide portfolio_site' %>
 
-  <div class="portfolio_site">
-    <%= render 'header_menu' %>
+  <%= render 'header_menu' %>
 
-    <%= image_tag @site.avatar.url(:thumb), class: :pf_avatar if @site.avatar.file? %>
+  <%= image_tag @site.avatar.url(:thumb), class: :pf_avatar if @site.avatar.file? %>
 
-    <h1><%= unless_blank @site.greetings, 'Greetings' %></h1>
+  <h1><%= unless_blank @site.greetings, 'Greetings' %></h1>
 
-    <div class="pf_summary">
-      <%= raw render_markdown @site.summary %>
-    </div>
+  <div class="pf_summary">
+    <%= raw render_markdown @site.summary %>
+  </div>
 
-    <%= render 'portfolio/site_projects/list', item: @site if @site.site_items.any? %>
+  <%= render 'portfolio/site_projects/list', item: @site if @site.site_items.any? %>
 
-    <div class="pf_contact">
-      <%= link_to 'Email me', "mailto:#{@site.email}", target: :_blank, class: 'btn btn-default' %>
-    </div>
+  <div class="pf_contact">
+    <%= link_to 'Email me', "mailto:#{@site.email}", target: :_blank, class: 'btn btn-default' %>
+  </div>
 
-    <div class="pf_social_links">
-      <% @site.site_social_links.each do |link| %>
-      <%= link_to image_tag(link.social_link.image(:medium)), link.url, 
-          title: link.social_link.name, target: :_blank, 
-          data: {toggle: 'tooltip', placement: 'top'} %>
-      <% end %>
-    </div>
-    
-    <% if admin_user_signed_in? and not params[:preview] %>
-      <%= link_to 'Edit', [:edit, @site] %> |
-      <%= link_to 'Back', sites_path %>
+  <div class="pf_social_links">
+    <% @site.site_social_links.each do |link| %>
+    <%= link_to image_tag(link.social_link.image(:medium)), link.url, 
+        title: link.social_link.name, target: :_blank, 
+        data: {toggle: 'tooltip', placement: 'top'} %>
     <% end %>
   </div>
+  
+  <% if admin_user_signed_in? and not params[:preview] %>
+    <%= link_to 'Edit', [:edit, @site] %> |
+    <%= link_to 'Back', sites_path %>
+  <% end %>
 <% else %>
   <div class="empty-portfolio">Nothing in here yet!</div>
 <% end %>
