some more style improvements

--- a/app/assets/stylesheets/portfolio/portfolio.scss
+++ b/app/assets/stylesheets/portfolio/portfolio.scss
@@ -31,6 +31,7 @@ h1, h2, h3 { font-weight: 600; }
     &.container_wide {
       width: auto;
       padding-left: 0;
+      padding-right: 0;
 
       .portfolio_header_menu {
         right: 10px;
