moved admin related controllers into admin namespace

--- a/app/assets/stylesheets/portfolio/site_items.scss
+++ b/app/assets/stylesheets/portfolio/site_items.scss
@@ -1,6 +1,7 @@
 .portfolio .portfolio_site_item {
   .top_title {
     position: relative;
+    margin-top: 15px;
 
     .pf_avatar {
       border-radius: 20px;
