--- a/app/views/portfolio/admin/social_links/index.html.erb
+++ b/app/views/portfolio/admin/social_links/index.html.erb
@@ -16,8 +16,8 @@
         <td><%= social_link.name %></td>
         <td><%= social_link.url_pattern %></td>
         <td><%= image_tag social_link.image.url(:medium) %></td>
-        <td><%= link_to 'Edit', edit_social_link_path(social_link) %></td>
-        <td><%= link_to 'Destroy', social_link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', [:edit, :admin, social_link] %></td>
+        <td><%= link_to 'Destroy', [:admin, social_link], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Social link', new_social_link_path, class: 'btn btn-default' %>
+<%= link_to 'New Social link', [:new, :admin, :social_link], class: 'btn btn-default' %>
