--- a/app/views/portfolio/admin/site_items/_form.html.erb
+++ b/app/views/portfolio/admin/site_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@site, @item]) do |f| %>
+<%= form_for([:admin, @site, @item]) do |f| %>
   <%= render 'portfolio/shared/form_errors', record: @item %>
 
   <div class="row">
@@ -24,8 +24,8 @@
   <div class="actions">
     <%= f.hidden_field :site_id %>
     <%= f.submit class: 'btn btn-primary' %>
-    <%= link_to 'Show', item_path(@item), class: 'btn btn-default' %>
-    <%= link_to 'Back', [@site, @resource_name_p], class: 'btn btn-default' %>
+    <%= link_to 'Show', item_path(@item), class: 'btn btn-default' unless @item.new_record? %>
+    <%= link_to 'Back', [:admin, @site, @resource_name_p], class: 'btn btn-default' %>
   </div>
 <% end %>
 
