--- a/app/views/portfolio/shared/_header_menu.html.erb
+++ b/app/views/portfolio/shared/_header_menu.html.erb
@@ -7,12 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Project name</a>
+      <%= link_to 'Portfolio Admin', admin_root_path, class: 'navbar-brand' %>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li><%= link_to 'Portfolios', [:admin, :sites] %></li>
+        <li class="active"><%= link_to 'Portfolios', [:admin, :sites] %></li>
         <li><%= link_to 'Social Links', [:admin, :social_links] %></li>
         <li><%= link_to 'Sign out', destroy_admin_user_session_path, method: :delete %></li>
       </ul>
